<resources>
    <string name="app_name" translatable="false">ConsoList</string>
    <string name="title_list">List</string>
    <string name="title_devices">Devices</string>
    <string name="add">Add</string>
    <string name="accessories">Accessories</string>
    <string name="device_image_desc">Device Image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="condition">Condition</string>
    <string name="save">Save</string>
    <string name="model_number">Model Number</string>
    <string name="model_numbers">Model Numbers</string>
    <string name="other">Other</string>
    <string name="prev_image">Previous image</string>
    <string name="next_image">Next image</string>
    <string name="add_image">Add image</string>
    <string name="del_image">Delete image</string>
    <string name="photos">Photos</string>
    <string name="set_image">Set image as thumbnail</string>
    <string name="take_photo">Take photo</string>
    <string name="add_accessory">Add accessory</string>
    <string name="accessory_image">Accessory image</string>
    <string name="controller">Controller</string>
    <string name="add_accessories">Adding accessories</string>
    <string name="add_accessories_msg">To add an accessory you must save this device first. Do you want to save?</string>
    <string name="select_accessory">Select an accessory</string>
    <string name="save_list">Save list</string>
    <string name="load_list">Load list</string>
    <string name="saved">Saved list!</string>
    <string name="failed_to_load">Failed to load list from file</string>
    <string name="edit_database">Edit Database</string>
    <string name="name">Name</string>
    <string name="img_url">Image URL</string>
    <string name="invalid_url">Invalid Image URL!</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="release_year">Release Year</string>
    <string name="description">Description</string>
    <string name="models">Models</string>
    <string name="add_model">Add model</string>
    <string name="delete_accessory">Delete accessory</string>
    <string name="add_model_number">Add model number</string>
    <string name="delete_model">Delete model</string>
    <string name="device_already_exists">Device already exists!</string>
    <string name="edited_device">Edited device!</string>
    <string name="added_device">Added device!</string>
    <string name="generation">Generation</string>
    <string name="type">Type</string>
    <string name="home">Home Console</string>
    <string name="handheld">Handheld Console</string>
    <string name="computer">Computer</string>
    <string name="memory_card">Memory Card</string>
    <string name="expansion">Expansion</string>
    <string name="find_online">Find Online</string>
    <string name="your_devices">Your Devices</string>
    <string name="view">View</string>
    <string name="select_website">Select Website</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sorting">Sorting</string>
    <string name="reverse_sort">Reverse Sort</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>

    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="seventh">Seventh</string>
    <string name="eighth">Eighth</string>
    <string name="ninth">Ninth</string>
    <string name="tenth">Tenth</string>
</resources>
