<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText
        android:id="@+id/imgUrlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/img_url"
        android:importantForAutofill="no"
        android:inputType="text|textUri|textWebEmailAddress" />
    <EditText
        android:id="@+id/modelNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/model_number"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TextFields" />
    <Spinner
        android:id="@+id/accessoryTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_accessory" />
</LinearLayout>