<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.devices.DeviceViewActivity">

    <ImageView
        android:id="@+id/deviceImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/device_image_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/deviceNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Console Name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/deviceImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deviceImageView"
        app:layout_constraintTop_toTopOf="@+id/deviceImageView"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/deviceImageView"
        app:layout_constraintStart_toStartOf="parent" >
        <Button
            android:id="@+id/deviceAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/deviceFindButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_online"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/buttonBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/description" />
            <TextView
                android:id="@+id/deviceDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/generation" />
            <TextView
                android:id="@+id/deviceGenerationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/type" />
            <TextView
                android:id="@+id/deviceTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/models" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/deviceModelsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/accessories" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/deviceAccessoriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/deviceYourDevicesHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/your_devices"
                android:visibility="gone" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/deviceYourDevicesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>