<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text" />
        <EditText
            android:id="@+id/imgUrlEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/img_url"
            android:importantForAutofill="no"
            android:inputType="text|textUri|textWebEmailAddress" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/modelNumbersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@android:drawable/ic_menu_add"
        android:background="@color/cardview_dark_background"
        android:contentDescription="@string/add" />
</LinearLayout>