<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/deviceImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/device_image_desc" />

    <TextView
        android:id="@+id/deviceNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Console Name"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/deviceImageView"
        app:layout_constraintTop_toTopOf="@+id/deviceImageView"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/deviceDescTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Console Description"
        app:layout_constraintStart_toEndOf="@+id/deviceImageView"
        app:layout_constraintTop_toBottomOf="@+id/deviceNameTextView"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/deviceDescTextView" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceDescTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>