<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListEntryActivity">

    <ImageView
        android:id="@+id/deviceImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/device_image_desc" />

    <TextView
        android:id="@+id/consoleNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Console Name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/deviceImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deviceImageView"
        app:layout_constraintTop_toTopOf="@+id/deviceImageView"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/attributesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceImageView">

        <EditText
            android:id="@+id/conditionEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/condition"
            android:importantForAutofill="no"
            android:inputType="text" />
        <!--        TODO location-->
        <!--        TODO images-->
        <!--        TODO accessories-->
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attributesLinearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>