<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListEntryActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/deviceImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/device_image_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/deviceNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Console Name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/deviceImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deviceImageView"
        app:layout_constraintTop_toTopOf="@+id/deviceImageView"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/attributesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceImageView">

<!--        TODO-->
        <EditText
            android:id="@+id/deviceManufacturerEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="12"
            android:hint="Manufacturer"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
        <EditText
            android:id="@+id/deviceNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="12"
            android:hint="Name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
        <EditText
            android:id="@+id/deviceReleaseYearEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="12"
            android:hint="Release Year"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
        <EditText
            android:id="@+id/deviceDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="12"
            android:hint="Description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:gravity="top|start"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:lines="6"
            android:scrollHorizontally="false"/>
        <EditText
            android:id="@+id/deviceImageURLEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="12"
            android:hint="Image URL"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress|textUri"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/modelsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Models" />
        <ImageButton
            android:id="@+id/addModelBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_add"
            android:contentDescription="Add model" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/modelRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/accessoriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessories" />
        <ImageButton
            android:id="@+id/addAccessoryBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_add"
            android:contentDescription="@string/add_accessory" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/accessoryRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attributesLinearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>